<resources>
    <string name="app_name">Test Task Effective Mobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Поиск</string>
    <string name="favorites">Избранное</string>
    <string name="responses">Отклики</string>
    <string name="messages">Сообщения</string>
    <string name="profile">Профиль</string>
    <string name="search_hint">Должность, ключевые слова</string>
    <string name="match_search_hint">Должность по подходящим вакансиям</string>
    <string name="vacancies_for_you">Вакансии для вас</string>
    <string name="respond">Откликнуться</string>
    <string name="people_watching_template">Сейчас просматривает %s</string>
    <string name="date_template">Опубликовано %s</string>
    <string name="error_loading">Не удалось загрузить данные, попробуйте позже</string>
    <string name="by_matching">По соответствию</string>
    <string name="more_vacancies">Еще вакансии</string>
</resources>